fix it-IT formatting

--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -342,10 +342,10 @@
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Abilita tutte le modalità nei livelli platformer",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Consenti Buffering di pausa",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Disattiva l'anticheat per il pause-buffering",
-  "LEVEL/HACK_AUTO_START_POS": "Auto StartPos",
-  "LEVEL/HACK_AUTO_START_POS/TIP": "Posiziona automaticamente gli StartPos in corrispondenza dei portali",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Download Automatico Canzone",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Avvia automaticamente il download delle canzoni quando apri la pagina del livello",
+  "LEVEL/HACK_AUTO_START_POS": "Auto StartPos",
+  "LEVEL/HACK_AUTO_START_POS/TIP": "Posiziona automaticamente gli StartPos in corrispondenza dei portali",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Attiva Click Between Frames di Syzzi (deve essere installato!)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click su Step",
@@ -485,11 +485,11 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/L/PRE": "Sinistro",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R": "Tasto Destro",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Destro",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Permetti nei Livelli valutati"
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Permetti nei Livelli valutati",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "Disattiva in modalità Pratica",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "Dimensione Interfaccia",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Dimensione Interfaccia",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x"
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "x",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "Cambia Dopo la Morte",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "Switcher StartPos",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "Permette di cambiare tra più posizioni di partenza all'interno del livello",
@@ -687,7 +687,7 @@
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Messaggio",
   "STATUS/TESTMODE/ENABLED": "Testmode",
   "STATUS/CHEAT_INDICATOR/ENABLED": "Indicatore Cheat",
-  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Nascondi quando non hai usato le hack attivate"
+  "STATUS/CHEAT_INDICATOR/DROPDOWN/HIDE_WHEN_LEGIT": "Nascondi quando non hai usato le hack attivate",
   "STATUS/FPS/ENABLED": "Contatore FPS",
   "STATUS/CPS/ENABLED": "Contatore CPS",
   "STATUS/CPS/DROPDOWN/MAX": "Mostra massimo",
