--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -677,8 +677,8 @@
   "STATUS/*/POSITION/1": "Arriba derecha",
   "STATUS/*/POSITION/2": "Abajo izquierda",
   "STATUS/*/POSITION/3": "Abajo derecha",
-  "STATUS/*/POSITION/4": "",
-  "STATUS/*/POSITION/5": "",
+  "STATUS/*/POSITION/4": "Arriba centro",
+  "STATUS/*/POSITION/5": "Abajo centro",
   "STATUS/*/MOVE/DOWN": "Abajo",
   "STATUS/*/MOVE/UP": "Arriba",
   "STATUS/*/PREFIX": "Mostrar prefijo",
