--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -34,31 +34,31 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertit correctament! Troba'l amb els teus altres macros",
   "MESSAGE/REPLAY/SAVE": "Vols desar els canvis al teu macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Si us plau, introdueix primer una tecla d'accés",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/RAND": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
-  "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
-  "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
-  "ICONIC/SPECIAL/SPEED/PRE": "",
-  "ICONIC/SPECIAL/SPEED/SUF": "",
-  "ICONIC/SPECIAL/PREVIEW": "",
-  "ICONIC/SPECIAL/INVERTED": "",
+  "ICONIC/DISABLE": "Desactivar",
+  "ICONIC/EFFECTS": "Efectes",
+  "ICONIC/GENERAL": "General",
+  "ICONIC/GLOW": "Resplendor",
+  "ICONIC/OVERRIDE": "Anuŀlació",
+  "ICONIC/RAND": "Randomitzador",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Barra de Progrés Vanilla",
+  "ICONIC/WAVE": "Wave",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Partícules Base",
+  "ICONIC/PREVIEW/COL1": "Color 1",
+  "ICONIC/PREVIEW/COL2": "Color 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Efectes Dash",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Efectes de Mort",
+  "ICONIC/PREVIEW/EXTRA": "Extres",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Deixant Fantasma",
+  "ICONIC/PREVIEW/GLOW": "Resplendor",
+  "ICONIC/PREVIEW/ICONS": "Icones",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Foc de Nau",
+  "ICONIC/PREVIEW/TRAIL": "Deixant",
+  "ICONIC/PREVIEW/TRAIL_COL": "Color del Deixant",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Deixant del Wave",
+  "ICONIC/SPECIAL/SPEED/PRE": "Velocitat",
+  "ICONIC/SPECIAL/SPEED/SUF": "x",
+  "ICONIC/SPECIAL/PREVIEW": "Vista Prèvia",
+  "ICONIC/SPECIAL/INVERTED": "Invertit",
   "GM_VAR/0060": "Icona Mini Per Defecte",
   "GM_VAR/0061": "Commuta Spider Dash",
   "GM_VAR/0062": "Commuta Foc Dash",
@@ -228,9 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Força el reinici de la càmera de cada StartPos",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Aturar Triggers en Morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Atura els triggers de moviment/rotació en morir perquè puguis veure què et va matar",
-  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Randomitzador d'Icones",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "Icones",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "Colors",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Tall del Deixant",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Recupera l'error del tall del deixant",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Taxa (x)",
@@ -677,8 +677,8 @@
   "STATUS/*/POSITION/1": "Superior-dreta",
   "STATUS/*/POSITION/2": "Inferior-esquerra",
   "STATUS/*/POSITION/3": "Inferior-dreta",
-  "STATUS/*/POSITION/4": "",
-  "STATUS/*/POSITION/5": "",
+  "STATUS/*/POSITION/4": "Superior-centre",
+  "STATUS/*/POSITION/5": "Inferior-centre",
   "STATUS/*/MOVE/DOWN": "Avall",
   "STATUS/*/MOVE/UP": "Amunt",
   "STATUS/*/PREFIX": "Mostrar Prefix",
@@ -725,3 +725,4 @@
   "REPLAY/CONVERT": "Convertir (.json, .gdr)",
   "REPLAY/NONE": "Cap Reproducció Seleccionada"
 }
+
