--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -24,16 +24,16 @@
   "MESSAGE/CANCEL": "Cancelar",
   "MESSAGE/YES": "Si",
   "MESSAGE/NO": "No",
-  "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Estas seguro de cerrar sesion waton?",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Estas seguro waton de cargar un guardado antiguo?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente, sangre.",
-  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "¿Estai seguro de que quieres desactivar todos los trucos destacados?",
-  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Pantalla completa detenida.",
-  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios no guardados en tu macro, estas seguro de borrarlos y empezar de cero?",
-  "MESSAGE/REPLAY/CONFIRM_DELETE": "¿Estas seguro waton de borrar la macro seleccionada?",
-  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertida exitosamente! Encuentrala junto a tus otras macros",
-  "MESSAGE/REPLAY/SAVE": "¿Querí guardar los cambios a tu macro?",
-  "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias, wacho.",
+  "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Estas seguro de cerrar sesion hermano?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Hermano tai seguro de cargar un guardado antiguo?",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente mi hermano.",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "¿Estai seguro de que quieres desactivar todos los hacks destacados?",
+  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Pantalla completa cerrada.",
+  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios no guardados en tu macro, estai seguro de borrarlos y empezar de cero?",
+  "MESSAGE/REPLAY/CONFIRM_DELETE": "¿Hermano tai seguro de borrar la macro seleccionada?",
+  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertida exitosamente! Encuentrala junto a tus otras macros mi hrmno",
+  "MESSAGE/REPLAY/SAVE": "¿Querí guardar los cambios a tu macro seleccionada?",
+  "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias waxo.",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -81,12 +81,12 @@
   "HOME/SCALE/PRE": "Escala de la Interfaz",
   "HOME/SCALE/SUF": "x",
   "HOME/THEME": "Tema",
-  "HOME/MISC": "Varios po waton",
+  "HOME/MISC": "Varios po mano",
   "HOME/MISC/LICENSES": "Licencias",
   "HOME/MISC/LOAD_LANG": "Cargar idioma",
   "HOME/MISC/LOAD_LEGACY_SAVE": "Cargar guardado antiguo",
   "HOME/MISC/LOGOUT": "Cerrar Sesion",
-  "KEYBINDS": "Atajos del tecladito",
+  "KEYBINDS": "Atajos del teclao",
   "KEYBINDS/SHORTCUT": "Atajo",
   "KEYBINDS/SET": "Asignar",
   "KEYBINDS/VIEW": "Ver Atajos",
