andamos de pana

--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -24,9 +24,9 @@
   "MESSAGE/CANCEL": "Cancelar",
   "MESSAGE/YES": "Si",
   "MESSAGE/NO": "No",
-  "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Estas seguro de cerrar sesion hermano?",
+  "MESSAGE/HOME/CONFIRM_LOGOUT": "¿Estai seguro de cerrar sesion hermano?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "¿Hermano tai seguro de cargar un guardado antiguo?",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente mi hermano.",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Cerraste Sesion Exitosamente hermano.",
   "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "¿Estai seguro de que quieres desactivar todos los hacks destacados?",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Pantalla completa cerrada.",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Tienes cambios no guardados en tu macro, estai seguro de borrarlos y empezar de cero?",
@@ -34,34 +34,34 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Macro convertida exitosamente! Encuentrala junto a tus otras macros mi hrmno",
   "MESSAGE/REPLAY/SAVE": "¿Querí guardar los cambios a tu macro seleccionada?",
   "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias waxo.",
-  "ICONIC/DISABLE": "",
-  "ICONIC/EFFECTS": "",
-  "ICONIC/GENERAL": "",
-  "ICONIC/GLOW": "",
-  "ICONIC/OVERRIDE": "",
-  "ICONIC/RAND": "",
-  "ICONIC/VANILLA_PROGRESS_BAR": "",
-  "ICONIC/WAVE": "",
-  "ICONIC/PREVIEW/BASE_PARTICLES": "",
-  "ICONIC/PREVIEW/COL1": "",
-  "ICONIC/PREVIEW/COL2": "",
-  "ICONIC/PREVIEW/DASH_EFFECT": "",
-  "ICONIC/PREVIEW/DEATH_EFFECT": "",
-  "ICONIC/PREVIEW/EXTRA": "",
-  "ICONIC/PREVIEW/GHOST_TRAIL": "",
-  "ICONIC/PREVIEW/GLOW": "",
-  "ICONIC/PREVIEW/ICONS": "",
-  "ICONIC/PREVIEW/SHIP_FIRE": "",
-  "ICONIC/PREVIEW/TRAIL": "",
-  "ICONIC/PREVIEW/TRAIL_COL": "",
-  "ICONIC/PREVIEW/WAVE_TRAIL": "",
-  "ICONIC/SPECIAL/SPEED/PRE": "",
-  "ICONIC/SPECIAL/SPEED/SUF": "",
-  "ICONIC/SPECIAL/PREVIEW": "",
-  "ICONIC/SPECIAL/INVERTED": "",
+    "ICONIC/DISABLE": "Desactivar",
+  "ICONIC/EFFECTS": "Efectos",
+  "ICONIC/GENERAL": "General",
+  "ICONIC/GLOW": "Brillo",
+  "ICONIC/OVERRIDE": "Anular",
+  "ICONIC/RAND": "Aleatorio",
+  "ICONIC/VANILLA_PROGRESS_BAR": "Barra de progreso Vanilla",
+  "ICONIC/WAVE": "Wave",
+  "ICONIC/PREVIEW/BASE_PARTICLES": "Base",
+  "ICONIC/PREVIEW/COL1": "Col 1",
+  "ICONIC/PREVIEW/COL2": "Col 2",
+  "ICONIC/PREVIEW/DASH_EFFECT": "Efecto de Dash (EL CANGRI)",
+  "ICONIC/PREVIEW/DEATH_EFFECT": "Efecto de muerte",
+  "ICONIC/PREVIEW/EXTRA": "Extra",
+  "ICONIC/PREVIEW/GHOST_TRAIL": "Ghost Trail",
+  "ICONIC/PREVIEW/GLOW": "Brillo",
+  "ICONIC/PREVIEW/ICONS": "Iconos",
+  "ICONIC/PREVIEW/SHIP_FIRE": "Nave de Fuego",
+  "ICONIC/PREVIEW/TRAIL": "Trail",
+  "ICONIC/PREVIEW/TRAIL_COL": "Trail Col",
+  "ICONIC/PREVIEW/WAVE_TRAIL": "Wave Trail",
+  "ICONIC/SPECIAL/SPEED/PRE": "Velocidad",
+  "ICONIC/SPECIAL/SPEED/SUF": "x",
+  "ICONIC/SPECIAL/PREVIEW": "Previa",
+  "ICONIC/SPECIAL/INVERTED": "Invertido",
   "GM_VAR/0060": "Mini Icono por defecto",
-  "GM_VAR/0061": "Cambiar dash de araña",
-  "GM_VAR/0062": "Cambiar fuego de dash",
+  "GM_VAR/0061": "Cambiar dash de araña (REFERENCIA AL CANGRI)",
+  "GM_VAR/0062": "Cambiar fuego de dash (ANDAMOS DE PANA)",
   "GM_VAR/0096": "Cambiar rastro de wave",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH/SEARCH": "Buscar",
