--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -228,9 +228,9 @@
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Fuerza el reinicio de la cámara de cada StartPosition",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Detener Activadores al Morir",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Detiene los activadores de movimiento/rotación al morir pa' que veas qué te mató",
-  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "",
-  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Randomizer de Iconos",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/ICONS": "Iconos",
+  "COSMETIC/ICON_RANDOMISER/DROPDOWN/COLOURS": "Colores",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "Corte de Estela",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "Devuelve el bug de corte de estela",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Intervalo",
