--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -34,6 +34,7 @@
   "MESSAGE/REPLAY/CONVERT_SUCCESS": "Successfully converted macro! Find it with your other macros",
   "MESSAGE/REPLAY/SAVE": "Do you want to save the changes to your macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Please input a keybind first",
+  "MESSAGE/KEYBINDS/UNBINDABLE": "Keybinds are not allowed on the selected element",
   "ICONIC/DISABLE": "Disable",
   "ICONIC/EFFECTS": "Effects",
   "ICONIC/GENERAL": "General",
@@ -463,6 +464,7 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW": "Draw Length",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/PRE": "Draw Length",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " frames",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "Require Show Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Uncapped Editor Length",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Show Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player's hitbox went during an attempt, Show Hitboxes required",
