--- a/langs/el-GR.json
+++ b/langs/el-GR.json
@@ -463,6 +463,7 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW": "Μήκος σχεδίασης",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/PRE": "Μήκος σχεδίασης",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " πλαίσια",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Απεριόριστο μήκος επεξεργαστή",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Εμφάνιση διαδρομής hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Εμφανίζει ένα ίχνος για το πού πήγε το hitbox του προγράμματος αναπαραγωγής σας κατά τη διάρκεια μιας προσπάθειας, Απαιτείται Εμφάνιση Hitboxes",
