--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -62,7 +62,7 @@
   "GM_VAR/0060": "デフォルトミニアイコン",
   "GM_VAR/0061": "スパイダーダッシュ切り替え",
   "GM_VAR/0062": "ダッシュファイア切り替え",
-  "GM_VAR/0096": "ウェーブトレイル切り替え"
+  "GM_VAR/0096": "ウェーブトレイル切り替え",
   "HOME/LANGUAGE": "言語",
   "HOME/SEARCH/SEARCH": "検索",
   "HOME/SEARCH/AUTO_SELECT": "自動選択",
@@ -90,7 +90,7 @@
   "KEYBINDS/SHORTCUT": "キー設定を選択",
   "KEYBINDS/SET": "設定するハックを選択",
   "KEYBINDS/VIEW": "キー設定を表示",
-  "KEYBINDS/REMOVE": "キー設定を削除"
+  "KEYBINDS/REMOVE": "キー設定を削除",
   "KEYBINDS/DISABLE_IN_EDITOR": "エディターで無効化",
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "レベルエディター使用中にMega Hackのキー設定を無効にします",
   "KEYBINDS/EMPTY": "該当なし",
@@ -130,7 +130,7 @@
   "COSMETIC/HACK_CLASSIC_PULSE": "クラシックパルス",
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "2.1以前のように60Hz以上でもパルスが動作するようにします",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "クラシックウェーブトレイル",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "バージョン2.1のウェーブトレイルを再実装します"
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "バージョン2.1のウェーブトレイルを再実装します",
   "COSMETIC/HACK_COIN_SHOWER": "コインのシャワー",
   "COSMETIC/HACK_COIN_SHOWER/TIP": "大量のコインが空から降ってくる！（たぶん）",
   "COSMETIC/HACK_NO_END_SHAKE": "エンドシェイク無し",
@@ -191,7 +191,7 @@
   "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "クラシックパーティクル無効",
   "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "パーティクルシステムをほぼ完全に無効にします",
   "COSMETIC/HACK_NO_PORTAL_CIRCLE": "ポータルサークル無効",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "ポータルに入る際の内側サークルを無効にします"
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "ポータルに入る際の内側サークルを無効にします",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "ポータルの稲妻なし",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "サイズ変更ポータルからの稲妻を無効化します",
   "COSMETIC/HACK_NO_PULSE": "パルスなし",
@@ -275,7 +275,7 @@
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "すべて削除",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "最新を削除",
   "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "最古を削除",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "透明度"
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "透明度",
   "LEVEL": "レベル",
   "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "自動クリック",
   "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "一定間隔で自動的に入力を適用します",
@@ -381,7 +381,7 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "死亡時ヒットボックス表示",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "死亡時のみレベルのヒットボックスを可視化します",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "ノークリップ時も表示",
-  "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "デスオブジェクト表示"
+  "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "デスオブジェクト表示",
   "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "レイアウト表示",
   "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "レベルからすべての装飾と色を削除します",
   "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "背景",
@@ -489,7 +489,7 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "練習モードで無効",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "インターフェイススケール",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "インターフェイススケール",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "倍"
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "倍",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/SWITCH_AFTER_DEATH": "死亡後に切り替え",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER": "スタートポジションスイッチャー",
   "LEVEL/STARTPOS_SWITCHER/HACK_STARTPOS_SWITCHER/TIP": "レベル内で複数のスタートポジションを切り替え可能にします",
@@ -562,7 +562,7 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/COMBO/30": "ズームフリップ（Y軸）",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "時間（秒）",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "時間",
-  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "秒"
+  "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "秒",
   "CHEAT_SAFETY": "チートセーフティ",
   "CHEAT_SAFETY/RULESET": "ルールセット",
   "CHEAT_SAFETY/DISABLE_CHEATS": "チートを無効化",
@@ -609,7 +609,7 @@
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "フルスクリーン",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "ゲームをメインディスプレイ全体に表示します",
   "DISPLAY/FULLSCREEN/COMBO/0": "排他モード",
-  "DISPLAY/FULLSCREEN/COMBO/1": "ボーダーレス"
+  "DISPLAY/FULLSCREEN/COMBO/1": "ボーダーレス",
   "UTILITY": "ユーティリティ",
   "UTILITY/CLICKS/P1": "P1クリック",
   "UTILITY/CLICKS/P2": "P2クリック",
@@ -701,7 +701,7 @@
   "STATUS/ATTEMPTS/ENABLED": "試行回数",
   "STATUS/JUMPS/ENABLED": "ジャンプ回数",
   "STATUS/LEVEL_TIME/ENABLED": "レベル時間",
-  "STATUS/PERCENTAGE/ENABLED": "パーセンテージ"
+  "STATUS/PERCENTAGE/ENABLED": "パーセンテージ",
   "STATUS/CLOCK/ENABLED": "時刻表示",
   "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12時間表示",
   "STATUS/FRAME/ENABLED": "フレームカウンター",
